# enigma

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  a.sh  benchmark.sh  bun.lockb  compile_flags.txt  docker-compose.yaml  example.json  meson.build  package.json  run.sh  run_test.sh  scratch
.cache/clangd/index/: cli.c.C39981AB274A145F.idx  cli.h.C4678E4AE1D09FAF.idx  enigma.h.91F35B187F04A366.idx  helper.c.53DBB4186C2F6FE9.idx  helper.h.65A3395C3E89A5CA.idx  main.c.C43B1A79BBAB9C6F.idx  plugboard.c.D28D36E4FC33C336.idx  plugboard.h.456B222AFDBD78BA.idx  reflector.c.F9F5D5C538240118.idx  reflector.h.2A270D98DD2E6995.idx  rotor.c.C1988349121F17AD.idx  rotor.h.364DEBF331B8A7FC.idx  server.c.2DD4219ABF408031.idx  server.h.978548BCA253B39D.idx  unity.c.BA45E49BB5386839.idx  unity.h.E640BE0BFCAFC27B.idx  unity_internals.h.72E751968A478CA0.idx
data/: index.php?cat=The U534 messages&page= P1030665  index.php?cat=The U534 messages&page=P1030659  index.php?cat=The U534 messages&page=P1030660  index.php?cat=The U534 messages&page=P1030661  index.php?cat=The U534 messages&page=P1030662  index.php?cat=The U534 messages&page=P1030663  index.php?cat=The U534 messages&page=P1030664  index.php?cat=The U534 messages&page=P1030666  index.php?cat=The U534 messages&page=P1030667  index.php?cat=The U534 messages&page=P1030668  index.php?cat=The U534 messages&page=P1030669  index.php?cat=The U534 messages&page=P1030670  index.php?cat=The U534 messages&page=P1030671  index.php?cat=The U534 messages&page=P1030672  index.php?cat=The U534 messages&page=P1030673  index.php?cat=The U534 messages&page=P1030675  index.php?cat=The U534 messages&page=P1030676  index.php?cat=The U534 messages&page=P1030679  index.php?cat=The U534 messages&page=P1030681  index.php?cat=The U534 messages&page=P1030682  index.php?cat=The U534 messages&page=P1030683  index.php?cat=The U534 messages&page=P1030684  index.php?cat=The U534 messages&page=P1030685  index.php?cat=The U534 messages&page=P1030686  index.php?cat=The U534 messages&page=P1030687  index.php?cat=The U534 messages&page=P1030688  index.php?cat=The U534 messages&page=P1030689  index.php?cat=The U534 messages&page=P1030690  index.php?cat=The U534 messages&page=P1030691  index.php?cat=The U534 messages&page=P1030692  index.php?cat=The U534 messages&page=P1030693  index.php?cat=The U534 messages&page=P1030694  index.php?cat=The U534 messages&page=P1030695  index.php?cat=The U534 messages&page=P1030696  index.php?cat=The U534 messages&page=P1030697  index.php?cat=The U534 messages&page=P1030698  index.php?cat=The U534 messages&page=P1030699  index.php?cat=The U534 messages&page=P1030700  index.php?cat=The U534 messages&page=P1030701  index.php?cat=The U534 messages&page=P1030702  (+7 more)
docs/: Backend.md  CMakeLists.md  Frontend.md
enigma/: CMakeLists.txt
enigma/src/: CMakeLists.txt  main.c
enigma/src/cli/: cli.c  cli.h
enigma/src/cyclometer/: cyclometer.c  cyclometer.h
enigma/src/enigma/: enigma.c
enigma/src/enigma/reflector/: reflector.c  reflector.h
enigma/src/server/: server.c  server.h
enigma/src/server/json_request_parser/: json_request_parser.c
enigma/tests/: CMakeLists.txt
enigma/tests/cli/: cli.h
enigma/tests/helper/: helper.h
enigma_backend/: CMakeLists.txt
enigma_backend/src/: main.c
enigma_backend/src/cli/: cli.c
enigma_backend/src/enigma/rotor/: rotor.h
enigma_backend/src/helper/: helper.c
enigma_backend/src/server/: server.c
enigma_c/: CMakeLists.txt  Dockerfile
enigma_c/buid/: enigma  enigma_test
enigma_c/src/: CMakeLists.txt
enigma_c/src/cli/: cli.c  cli.h
enigma_c/src/cyclometer/: cyclometer.c  cyclometer.h
enigma_c/src/enigma/: enigma.c  enigma.h
enigma_c/src/enigma/plugboard/: plugboard.c
enigma_c/src/enigma/reflector/: reflector.h
enigma_c/src/enigma/rotor/: rotor.c
enigma_c/src/helper/: helper.c  helper.h
enigma_c/src/server/: server.c
enigma_c/src/server/json_request_parser/: json_request_parser.c  json_request_parser.h
enigma_c/tests/: CMakeLists.txt
enigma_c/tests/cli/: cli.c  cli.h
enigma_c/tests/helper/: helper.c
enigma_frontend/: bun.lockb  package.json  tsconfig.json  vite.config.ts
enigma_frontend/src/: App.vue  main.ts
enigma_frontend/src/components/: Enigma.vue  EnigmaTextArea.vue  Plugboard.vue  PlusMinusNumber.vue  Rotor.vue
enigma_frontend/src/constants/: EnigmaTypes.ts  Rotors.ts
enigma_frontend/src/types/: RotorType.ts
enigma_react/: Dockerfile  bun.lockb  nginx.conf  package.json  tsconfig.json  vite.config.ts
enigma_react/src/: App.tsx  index.css  main.tsx
enigma_react/src/api/: enigma_api.ts
enigma_react/src/components/InfoTextBlock/: InfoTextBlock.tsx  styles.module.css
enigma_react/src/components/PlusMinus/: PlusMinus.tsx  styles.module.css
enigma_react/src/components/Reflector/: Reflector.tsx  styles.module.css
enigma_react/src/components/Rotor/: Rotor.tsx  styles.module.css
enigma_react/src/components/Sidebar/: Sidebar.tsx  styles.module.css
enigma_react/src/components/TextInput/: TextInput.tsx  styles.module.css
enigma_react/src/redux/: store.ts
enigma_react/src/redux/slices/: enigma_slice.ts
enigma_react/src/screens/Enigma/: Enigma.tsx  styles.module.css
enigma_react/src/types/: EnigmaType.ts
src/: CMakeLists.txt  main.c
src/cli/: cli.c  cli.h
src/enigma/: enigma.c  enigma.h  plugboard.c  plugboard.h  reflector.c  reflector.h  rotor.c  rotor.h
src/enigma/plugboard/: plugboard.c  plugboard.h
src/enigma/reflector/: reflector.c
src/enigma/rotor/: rotor.c  rotor.h
src/example_module/: example.c  example.h
src/helper/: helper.c  helper.h
src/math/: math.c  math.h
src/rotor/: rotor.c  rotor.h
src/server/: server.h
src/ukw/: ukw.c  ukw.h
test/: CMakeLists.txt
test/helper/: helper.c  helper.h
test/src/: cliTest.c  cliTest.h  exampleTest.c  exampleTest.h  helperTest.c  helperTest.h  mathTest.c  mathTest.h  test.c  tests.c
tests/: CMakeLists.txt
tests/src/: main.c
tests/src/helper/: helper.c
tools/: generate_message_keys.sh
(+2 files in other folders)
